--- a/app/src/main/res/layout/blog_list_row.xml
+++ b/app/src/main/res/layout/blog_list_row.xml
@@ -7,8 +7,10 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardViewThing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="#00000000"
         android:layout_margin="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
