--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.keiraindustries.myjournal.MainActivity">
+    tools:context="com.keiraindustries.myjournal.Activities.MainActivity">
     <item
         android:id="@+id/action_add_entry"
         android:orderInCategory="100"
         android:title="Add"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sync"
+        android:orderInCategory="100"
+        android:title="Sync"
         app:showAsAction="never" />
 </menu>
